# HOTV-Series5

./: README.md
source/alsa/: OSS_INFO.1.0.24.1.txt
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/: BUILD.gn  rh_init_mtk_bt_service.c
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/inc/: mtk_bt_service_a2dp.h  mtk_bt_service_a2dp_handle.h  mtk_bt_service_avrcp.h  mtk_bt_service_avrcp_handle.h  mtk_bt_service_dbg.h  mtk_bt_service_dbg_handle.h  mtk_bt_service_gap.h  mtk_bt_service_gap_handle.h  mtk_bt_service_gattc.h  mtk_bt_service_gattc_handle.h  mtk_bt_service_gatts.h  mtk_bt_service_gatts_handle.h  mtk_bt_service_hfclient.h  mtk_bt_service_hfclient_handle.h  mtk_bt_service_hidh.h  mtk_bt_service_hidh_handle.h  mtk_bt_service_spp.h  mtk_bt_service_spp_handle.h
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/a2dp/: mtk_bt_service_a2dp.c  mtk_bt_service_a2dp_handle.c
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/avrcp/: mtk_bt_service_avrcp.c  mtk_bt_service_avrcp_handle.c
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/dbg/: mtk_bt_service_dbg.c  mtk_bt_service_dbg_handle.c
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/dbg/config/: bt_dbg_config.h  bt_dbg_config_a2dp.h  bt_dbg_config_avrcp.h  bt_dbg_config_gap.h  bt_dbg_config_gatt.h  bt_dbg_config_hfp.h  bt_dbg_config_hid.h  bt_dbg_config_l2cap.h  bt_dbg_config_spp.h  bt_dbg_def.h
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/gap/: mtk_bt_service_gap.c  mtk_bt_service_gap_handle.c
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/gatt/: mtk_bt_service_gattc.c  mtk_bt_service_gattc_handle.c  mtk_bt_service_gatts.c  mtk_bt_service_gatts_handle.c
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/hfp/: mtk_bt_service_hfclient.c  mtk_bt_service_hfclient_handle.c
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/hid/: mtk_bt_service_hidh.c  mtk_bt_service_hidh_handle.c
source/bluedroid/bluetooth_mw/rpc/mtk_rpcipc_bt_service/mtk_bt_service_server/src/spp/: mtk_bt_service_spp.c  mtk_bt_service_spp_handle.c
source/bluedroid/bluetooth_mw/sdk/src/: BUILD.gn  bluetooth_sync.c  bt_mw_cli.c  bt_mw_common.c  bt_mw_devices_info.c  bt_mw_log.c  bt_mw_manager.c  bt_mw_msg.c  c_bt_mw_manager.c
source/bluedroid/bluetooth_mw/sdk/src/a2dp/: BUILD.gn  bt_mw_a2dp_cli.c  bt_mw_a2dp_common.c  c_bt_mw_a2dp_common.c
source/bluedroid/bluetooth_mw/sdk/src/a2dp/snk/: bt_mw_a2dp_snk.c  c_bt_mw_a2dp_snk.c
source/bluedroid/bluetooth_mw/sdk/src/a2dp/src/: bt_mw_a2dp_src.c  c_bt_mw_a2dp_src.c
source/bluedroid/bluetooth_mw/sdk/src/avrcp/: BUILD.gn  bt_mw_avrcp.c  bt_mw_avrcp_cli.c  bt_mw_avrcp_misc.c  c_bt_mw_avrcp.c
source/bluedroid/bluetooth_mw/sdk/src/gap/: BUILD.gn  bt_mw_gap.c  bt_mw_gap_cli.c  c_bt_mw_gap.c
source/bluedroid/bluetooth_mw/sdk/src/gatt/: BUILD.gn  bt_mw_gatt.c  bt_mw_gatt_cli.c  c_bt_mw_gatt.c
source/bluedroid/bluetooth_mw/sdk/src/hfp/: BUILD.gn  bt_mw_hfclient.c  c_bt_mw_hfclient.c
source/bluedroid/bluetooth_mw/sdk/src/hid/: BUILD.gn  bt_mw_hid_cli.c  bt_mw_hidd.c  bt_mw_hidh.c  c_bt_mw_hidd.c  c_bt_mw_hidh.c
source/bluedroid/bluetooth_mw/sdk/src/inc/: bluetooth_sync.h  bt_mw_a2dp_cli.h  bt_mw_a2dp_common.h  bt_mw_a2dp_snk.h  bt_mw_a2dp_src.h  bt_mw_avrcp.h  bt_mw_avrcp_cli.h  bt_mw_avrcp_misc.h  bt_mw_common.h  bt_mw_devices_info.h  bt_mw_gap.h  bt_mw_gap_cli.h  bt_mw_gatt.h  bt_mw_gatt_cli.h  bt_mw_hfclient.h  bt_mw_hid_cli.h  bt_mw_hidd.h  bt_mw_hidh.h  bt_mw_log.h  bt_mw_manager.h  bt_mw_msg.h  bt_mw_spp.h  bt_mw_spp_cli.h  pcmcapture.h
source/bluedroid/bluetooth_mw/sdk/src/spp/: BUILD.gn  bt_mw_spp.c  bt_mw_spp_cli.c  c_bt_mw_spp.c
(+796 files in other folders)
